--- a/.github/workflows/scaffold_pkg_via_issue_comment.yml
+++ b/.github/workflows/scaffold_pkg_via_issue_comment.yml
@@ -35,7 +35,7 @@ jobs:
     steps:
       # Exit if comment does not contain scaffolding directive:
       - name: Exit if comment does not contain scaffolding directive
-        if: ${{ !contains(github.event.comment.body, 'action: scaffold') }}
+        if: ${{ !contains(github.event.comment.body, 'scaffold') }}
         run: exit 0
 
       # Checkout the current branch:
