Directly use outputs and clean-up

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -81,8 +81,7 @@ jobs:
       # Lint Markdown files:
       - name: 'Lint Markdown files'
         run: |
-        FILES=${{ steps.changed-md-files.outputs.all_changed_files }}
-        make lint-markdown-files FILES="$FILES"
+        make lint-markdown-files FILES="${{ steps.changed-md-files.outputs.all_changed_files }}"
 
       # Get list of changed JavaScript files:
       - name: Get list of changed JavaScript files
@@ -94,7 +93,4 @@ jobs:
       # Lint JavaScript files:
       - name: 'Lint JavaScript files'
         run: |
-        FILES=${{ steps.changed-js-files.outputs.all_changed_files }}
-        make lint-javascript-files FILES="$FILES"
-
-        timeout-minutes: 5
+        make lint-javascript-files FILES="${{ steps.changed-js-files.outputs.all_changed_files }}"
