Change clone depth

--- a/.github/workflows/lint_changed_files.yml
+++ b/.github/workflows/lint_changed_files.yml
@@ -45,8 +45,8 @@ jobs:
           # Specify whether to remove untracked files before checking out the repository:
           clean: true
 
-          # Limit clone depth to the most recent commit:
-          fetch-depth: 1
+          # Limit clone depth to the last 25 commits:
+          fetch-depth: 25
 
           # Specify whether to download Git-LFS files:
           lfs: false
